@media fixes whitespace at the bottom of the page

--- a/cards/css/styles.css
+++ b/cards/css/styles.css
@@ -121,6 +121,7 @@ p {
     .container {
         grid-template-columns: 1fr;
         margin: 0 2rem;
+        height: 100%;
     }
 
     .card {
